# smam

./: LICENSE  README.md  pyproject.toml  setup.py
src/smam_package/: smam.py
